--- a/.github/workflows/cvmfs_repositories.yml
+++ b/.github/workflows/cvmfs_repositories.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: eic/setup-cvmfs@main
+    - uses: cvmfs-contrib/setup-cvmfs@main
       with:
         cvmfs_repositories: 'eic.opensciencegrid.org'
     - name: Setup CernVM-FS
