Test against grid.cern.ch and cvmfs_config showconfig

--- a/.github/workflows/minimal-usage.yml
+++ b/.github/workflows/minimal-usage.yml
@@ -7,4 +7,4 @@ jobs:
     - uses: actions/checkout@v2
     - uses: cvmfs-contrib/setup-cvmfs@main
     - name: Setup CernVM-FS
-      run: cat /etc/cvmfs/default.local && ls /cvmfs/eic.opensciencegrid.org/
+      run: cat /etc/cvmfs/default.local && ls /cvmfs/grid.cern.ch/ && cvmfs_config showconfig grid.cern.ch
