--- a/.github/workflows/cvmfs_http_proxy.yml
+++ b/.github/workflows/cvmfs_http_proxy.yml
@@ -9,4 +9,4 @@ jobs:
       with:
         cvmfs_http_proxy: 'auto'
     - name: Setup CernVM-FS
-      run: cat /etc/cvmfs/default.local && ls /cvmfs/eic.opensciencegrid.org/
+      run: cat /etc/cvmfs/default.local && ls /cvmfs/grid.cern.ch/ && cvmfs_config showconfig grid.cern.ch
