--- a/.github/workflows/cvmfs_repositories.yml
+++ b/.github/workflows/cvmfs_repositories.yml
@@ -7,6 +7,6 @@ jobs:
     - uses: actions/checkout@v2
     - uses: cvmfs-contrib/setup-cvmfs@main
       with:
-        cvmfs_repositories: 'eic.opensciencegrid.org'
+        cvmfs_repositories: 'grid.cern.ch'
     - name: Setup CernVM-FS
-      run: cat /etc/cvmfs/default.local && ls /cvmfs/eic.opensciencegrid.org/
+      run: cat /etc/cvmfs/default.local && ls /cvmfs/grid.cern.ch/ && cvmfs_config showconfig grid.cern.ch
