--- a/action.yml
+++ b/action.yml
@@ -17,3 +17,6 @@ runs:
   steps: 
     - run: ${{ github.action_path }}/setup-cvmfs.sh
       shell: bash
+      env:
+        INPUT_CVMFS_REPOSITORIES: ${{ inputs.cvmfs_repositories }}
+        INPUT_CVMFS_HTTP_PROXY: ${{ inputs.cvmfs_http_proxy }}
