--- a/.github/workflows/cvmfs_config_package.yml
+++ b/.github/workflows/cvmfs_config_package.yml
@@ -4,18 +4,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - uses: cvmfs-contrib/github-action-cvmfs@main
       with:
         cvmfs_repositories: 'pilot.eessi-hpc.org'
         cvmfs_http_proxy: 'DIRECT'
         cvmfs_config_package: 'https://github.com/EESSI/filesystem-layer/releases/download/v0.2.3/cvmfs-config-eessi_0.2.3_all.deb'
-    - name: Setup CernVM-FS
+        run_local_checkout: 'true'
+    - name: Test CernVM-FS
       run: |
         echo "### Dump default.local ###"
         cat /etc/cvmfs/default.local
+        echo "### Try cvmfs_config probe ###"
+        sudo cvmfs_config probe
         echo "### Test /cvmfs/pilot.eessi-hpc.org ###"
         ls /cvmfs/pilot.eessi-hpc.org
         echo "### Test cvmfs_config showconfig pilot.eessi-hpc.org ###"
         cvmfs_config showconfig pilot.eessi-hpc.org
-        echo "### Try cvmfs_config probe ###"
-        sudo cvmfs_config probe
