--- a/.github/workflows/minimal-usage.yml
+++ b/.github/workflows/minimal-usage.yml
@@ -4,7 +4,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - uses: cvmfs-contrib/github-action-cvmfs@main
+      with:
+        run_local_checkout: 'true'
     - name: Test CernVM-FS
       run: |
         echo "### Dump default.local ###"
