--- a/action.yml
+++ b/action.yml
@@ -49,7 +49,7 @@ inputs:
     required: false
     default: ''
   cvmfs_client_profile:
-    description: 'Choose a suitable proxy automatically is set to single'
+    description: 'Choose a suitable proxy automatically if set to single.'
     required: false
     default: 'single'
   cvmfs_config_repo_required:
@@ -177,7 +177,7 @@ inputs:
     required: false
     default: ''
   cvmfs_memcache_size:
-    description: 'Size of the CernVM-FS meta-data memory cache in Megabyte.'
+    description: 'Size of the CernVM-FS meta-data memory cache in Megabytes.'
     required: false
     default: ''
   cvmfs_mount_rw:
@@ -193,7 +193,7 @@ inputs:
     required: false
     default: ''
   cvmfs_nfs_shared:
-    description: 'If set a path, used to store the NFS maps in an SQlite database, instead of the usual LevelDB storage in the cache directory.'
+    description: 'If set to a path, used to store the NFS maps in an SQlite database, instead of the usual LevelDB storage in the cache directory.'
     required: false
     default: ''
   cvmfs_nfs_source:
