--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -1,5 +1,9 @@
 name: macOS
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  schedule:
+    - cron:  '33 3 * * *'
 jobs:
   macOS-minimal:
     runs-on: ${{ matrix.os }}
