--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, macos-10.15, macos-11]
+        os: [macos-10.15]
     steps:
     - uses: actions/checkout@v2
     - uses: ./
