--- a/action.yml
+++ b/action.yml
@@ -335,6 +335,15 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - id: lsb-release
+      run: |
+        source /etc/lsb-release
+        echo "::set-output name=id::${DISTRIB_ID}"
+        echo "::set-output name=release::${DISTRIB_RELEASE}"
+        echo "::set-output name=codename::${DISTRIB_CODENAME}"
+        echo "::set-output name=description::${DISTRIB_DESCRIPTION}"
+        echo "::set-output name=id-release::${DISTRIB_ID}-${DISTRIB_DESCRIPTION}"
+      shell: bash
     - run: |
         ${{ github.action_path }}/setup-cvmfs.sh
       shell: bash
