--- a/action.yml
+++ b/action.yml
@@ -344,6 +344,11 @@ runs:
         echo "::set-output name=description::${DISTRIB_DESCRIPTION}"
         echo "::set-output name=id-release::${DISTRIB_ID}-${DISTRIB_DESCRIPTION}"
       shell: bash
+    - uses: actions/cache@v3
+      with:
+        key: cvmfs-apt-cache-${{ steps.lsb-release.outputs.id-release }}-${{ hashFiles('action.yml') }}
+        path: |
+          ${{ inputs.apt_cache }}
     - run: |
         ${{ github.action_path }}/setup-cvmfs.sh
       shell: bash
