--- a/.github/workflows/cvmfs_repositories.yml
+++ b/.github/workflows/cvmfs_repositories.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: .
+    - uses: ./
       with:
         cvmfs_repositories: 'grid.cern.ch'
     - name: Test CernVM-FS
