--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -13,7 +13,7 @@ jobs:
         os: [macos-latest, macos-10.15, macos-11]
     steps:
     - uses: actions/checkout@v2
-    - uses: .
+    - uses: ./
       with:
         cvmfs_repositories: 'sft.cern.ch'
     - name: Test CernVM-FS
