--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -13,7 +13,7 @@ jobs:
         os: [ubuntu-latest, ubuntu-18.04, ubuntu-20.04]
     steps:
     - uses: actions/checkout@v2
-    - uses: .
+    - uses: ./
     - name: Test CernVM-FS
       run: |
         echo "### Dump default.local ###"
