--- a/action.yml
+++ b/action.yml
@@ -340,7 +340,7 @@ runs:
         source /etc/lsb-release
         echo "id=${DISTRIB_ID}" >> $GITHUB_OUTPUT
         echo "release=${DISTRIB_RELEASE}" >> $GITHUB_OUTPUT
-        echo "codename=${DISTRIB_CODENAME}" >> $GITHUB_OUTPUTENV
+        echo "codename=${DISTRIB_CODENAME}" >> $GITHUB_OUTPUT
         echo "description=${DISTRIB_DESCRIPTION}" >> $GITHUB_OUTPUT
         echo "id-release=${DISTRIB_ID}-${DISTRIB_DESCRIPTION}" >> $GITHUB_OUTPUT
       shell: bash
