--- a/action.yml
+++ b/action.yml
@@ -323,7 +323,10 @@ inputs:
   cvmfs_macos_pkg_location:
     description: 'Location from where to download the masOS pkg package of CernVM-FS'
     required: false
-    default: 'http://ecsft.cern.ch/dist/cvmfs/cvmfs-release/cvmfs-latest.pkg'
+    #default: 'http://ecsft.cern.ch/dist/cvmfs/cvmfs-release/cvmfs-latest.pkg'
+    # this nightly build is based on the cvmfs mac-fuse-t branch
+    # TODO: change back to latest once it is released
+    default: 'http://ecsft.cern.ch/dist/cvmfs/nightlies/cvmfs-git-1234/cvmfs-2.12.0-0.1234-git-958741c6df468802.pkg'
   cvmfs_config_package:
     description: 'URL to the cvmfs config package to install'
     required: false
