--- a/action.yml
+++ b/action.yml
@@ -340,12 +340,14 @@ runs:
   steps:
     - id: lsb-release
       run: |
-        source /etc/lsb-release
-        echo "id=${DISTRIB_ID}" >> $GITHUB_OUTPUT
-        echo "release=${DISTRIB_RELEASE}" >> $GITHUB_OUTPUT
-        echo "codename=${DISTRIB_CODENAME}" >> $GITHUB_OUTPUT
-        echo "description=${DISTRIB_DESCRIPTION}" >> $GITHUB_OUTPUT
-        echo "id-release=${DISTRIB_ID}-${DISTRIB_DESCRIPTION}" >> $GITHUB_OUTPUT
+        if [ "$RUNNER_OS" == "Linux" ]; then
+          source /etc/lsb-release
+          echo "id=${DISTRIB_ID}" >> $GITHUB_OUTPUT
+          echo "release=${DISTRIB_RELEASE}" >> $GITHUB_OUTPUT
+          echo "codename=${DISTRIB_CODENAME}" >> $GITHUB_OUTPUT
+          echo "description=${DISTRIB_DESCRIPTION}" >> $GITHUB_OUTPUT
+          echo "id-release=${DISTRIB_ID}-${DISTRIB_DESCRIPTION}" >> $GITHUB_OUTPUT
+        fi
       shell: bash
     - uses: actions/cache@v4
       with:
