CVMFS mac support now in prod; use homebrew to install (#31)
* CVMFS mac support now in prod; use homebrew to install

* update macos os label

* update macos os label

* update test

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, macos-11]
+        os: [macos-latest, macos-13]
     steps:
     - uses: actions/checkout@v4
     - uses: ./
@@ -20,7 +20,8 @@ jobs:
       run: |
        echo "### Dump default.local ###"
        cat /etc/cvmfs/default.local
+       sleep 5
        echo "### Try to ls on /Users/Shared/cvmfs/sft.cern.ch/ ###"
-       ls /Users/Shared/cvmfs/sft.cern.ch/
+       ls /Users/Shared/cvmfs/sft.cern.ch/ | grep lcg
        echo "### Try to ls on /cvmfs/sft.cern.ch/ ###"
-       ls /cvmfs/sft.cern.ch/
+       ls /cvmfs/sft.cern.ch/ | grep lcg
