--- a/action.yml
+++ b/action.yml
@@ -345,10 +345,15 @@ runs:
           echo "id-release=macOS-$(sw_vers -productVersion)" >> $GITHUB_OUTPUT
           echo "arch=$(uname -m)" >> $GITHUB_OUTPUT
         fi
+        # Create an envvar that stores information about the action version used
+        ACTION_VERSION=$(basename "$GITHUB_ACTION_PATH")
+        ACTION_NAME=$(basename $(dirname "$GITHUB_ACTION_PATH"))
+        ACTION_OWNER=$(basename $(dirname $(dirname "$GITHUB_ACTION_PATH")))
+        echo "cvmfs_action_version=$ACTION_OWNER_$ACTION_NAME_$ACTION_VERSION" >> $GITHUB_ENV
       shell: bash
     - uses: actions/cache@v4
       with:
-        key: cvmfs-apt-cache-${{ steps.lsb-release.outputs.id-release }}-${{ steps.lsb-release.outputs.arch }}
+        key: cvmfs-apt-cache-${{ steps.lsb-release.outputs.id-release }}-${{ steps.lsb-release.outputs.arch }}-${{ steps.lsb-release.outputs.cvmfs_action_version }}
         path: |
           ${{ inputs.apt_cache }}
     - run: |
