--- a/action.yml
+++ b/action.yml
@@ -339,16 +339,21 @@ runs:
           echo "release=${DISTRIB_RELEASE}" >> $GITHUB_OUTPUT
           echo "codename=${DISTRIB_CODENAME}" >> $GITHUB_OUTPUT
           echo "description=${DISTRIB_DESCRIPTION}" >> $GITHUB_OUTPUT
-          echo "id-release=${DISTRIB_ID}-${DISTRIB_DESCRIPTION}" >> $GITHUB_OUTPUT
+          echo "id-release=${DISTRIB_ID}-${DISTRIB_RELEASE}" >> $GITHUB_OUTPUT
           echo "arch=$(uname -m)" >> $GITHUB_OUTPUT
         elif [ "$RUNNER_OS" == "macOS" ]; then
           echo "id-release=macOS-$(sw_vers -productVersion)" >> $GITHUB_OUTPUT
           echo "arch=$(uname -m)" >> $GITHUB_OUTPUT
         fi
+        # Create an envvar that stores information about the action version used
+        ACTION_VERSION=$(basename "$GITHUB_ACTION_PATH")
+        ACTION_NAME=$(basename $(dirname "$GITHUB_ACTION_PATH"))
+        ACTION_OWNER=$(basename $(dirname $(dirname "$GITHUB_ACTION_PATH")))
+        echo "cvmfs_action_version=${ACTION_OWNER}_${ACTION_NAME}_${ACTION_VERSION}" >> $GITHUB_OUTPUT
       shell: bash
     - uses: actions/cache@v4
       with:
-        key: cvmfs-apt-cache-${{ steps.lsb-release.outputs.id-release }}-${{ steps.lsb-release.outputs.arch }}-${{ hashFiles('action.yml') }}
+        key: cvmfs-apt-cache-${{ steps.lsb-release.outputs.id-release }}-${{ steps.lsb-release.outputs.arch }}-${{ steps.lsb-release.outputs.cvmfs_action_version }}
         path: |
           ${{ inputs.apt_cache }}
     - run: |
