--- a/.github/workflows/publish-feature.yml
+++ b/.github/workflows/publish-feature.yml
@@ -1,6 +1,12 @@
 name: Publish Devcontainer Feature
 
 on:
+  workflow_call:
+    inputs:
+      version:
+        description: 'The version to publish'
+        required: true
+        type: string
   release:
     types: [created]
 
@@ -17,5 +23,18 @@ jobs:
       - name: Login to GitHub Container Registry
         run: echo "${{ secrets.WRITE_PACKAGES_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
+      - name: Add version to environment
+        run: |
+          VERSION="${{ inputs.version || github.ref_name }}"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Add version to devcontainer-feature.json
+        run: |
+          jq --arg VERSION "${{ env.VERSION }}" '.version = $VERSION' src/cvmfs/devcontainer-feature.json > tmp.json
+          mv tmp.json src/cvmfs/devcontainer-feature.json
+
       - name: Publish Devcontainer Feature
-        run: devcontainer features publish src/cvmfs --namespace cvmfs-contrib
+        run: devcontainer features publish --namespace ${{ github.actor }}/${{ github.repository }} .
+
+      - name: Build Devcontainer Feature
+        run: devcontainer build --workspace-folder . --image-name test-cvmfs-feature --additional-features ghcr.io/${{ github.actor }}/${{ github.repository }}/cvmfs:${{ env.VERSION }}
