--- a/action.yml
+++ b/action.yml
@@ -319,7 +319,7 @@ inputs:
   cvmfs_ubuntu_deb_location:
     description: 'Location from where to download the Ubuntu deb package of CernVM-FS'
     required: false
-    default: 'https://ecsft.cern.ch/dist/cvmfs/cvmfs-release/cvmfs-release-latest_all.deb'
+    default: 'https://cvmrepo.s3.cern.ch/cvmrepo/apt/cvmfs-release-latest_all.deb'
   cvmfs_config_package:
     description: 'URL to the cvmfs config package to install'
     required: false
